[tool.poetry]
name = "vector-test"
version = "0.1.0"
description = ""
authors = ["Alexandre Bulté <alexandre@bulte.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
influxdb-client = "^1.31.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
