[tool.poetry]
name = "vector-test"
version = "0.1.0"
description = ""
authors = ["Sixte de Maupeou <sixtedemaupeou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
influxdb-client = "^1.31.0"
boto3 = "^1.24.58"
botocore = "^1.27.58"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
